crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@call.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% with f = range %}{% for x in f(upper) %}[{{ x }}]{% endfor %}{% endwith %}\n{% for k, v in dict(a=1, b=2, c=3)|dictsort %}[{{ k }}:{{ v }}]{% endfor %}"
info:
  upper: 10
input_file: minijinja/tests/inputs/call.txt
---
[0][1][2][3][4][5][6][7][8][9]
[a:1][b:2][c:3]

