crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@concat.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ a ~ b }}\n{{ a + b }}\n{{ a[0] + a[1:] }}"
info:
  a: foo
  b: bar
---
foobar
foobar
foo

