crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_bad_addition.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{{ [1, 2] + 23 }}"
info:
  __minijinja_current_path: err_bad_addition.txt
  __minijinja_current_span:
    end_col: 1
    end_line: 1
    end_offset: 0
    start_col: 1
    start_line: 1
    start_offset: 0
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/err_bad_addition.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "tried to use + operator on unsupported types sequence and number",
    name: "err_bad_addition.txt",
}

invalid operation: tried to use + operator on unsupported types sequence and number
(in err_bad_addition.txt:1:1)
