crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_bad_block.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{% extends \"simple_layout.txt\" %}\n{% block title %}{{ missing_function() }}{% endblock %}"
info:
  __minijinja_current_path: err_bad_block.txt
  __minijinja_current_span:
    end_col: 1
    end_line: 1
    end_offset: 0
    start_col: 1
    start_line: 1
    start_offset: 0
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/err_bad_block.txt
---
!!!ERROR!!!

Error {
    kind: UnknownFunction,
    detail: "Jinja macro or function `missing_function` is unknown",
    name: "err_bad_block.txt",
}

unknown function: Jinja macro or function `missing_function` is unknown
(in err_bad_block.txt:2:18)
